# math-thingy

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.CEEB166505C9753B.idx
src/: main.cpp
